# alltheplaces

./: .a.swp  .dockerignore  .flake8  .git-blame-ignore-revs  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .tegut.geojson.swp  .travis.yml  API.md  CODE_OF_CONDUCT.md  DATA_FORMAT.md  Dockerfile  LICENSE  Pipfile  README.md  TESTING.md  all_spiders.yml  charles_tyrwhitt  charles_tyrwhitt.py  curves.py  dollartree.py  ernest_jones_gb.py  hermes.csv  longchamp.csv  lowes.py  main.py  mkdocs.yml  pyproject.toml  safeway.py  scrapinghub.yml  scrapy.cfg  setup.py  sizzler_th.ndgeojson  temp.db  walmart.sitemap
.claude/: REVIEW_RULES.md  SESSION_PROMPT.md
.claude/agents/: dead-spider-triage.md  pr-handler.md  pr-triage.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: request.yaml  spider_bug_report.yaml  spider_request_agile_store_locator.yml  spider_request_aheadworks.yml  spider_request_algolia.yml  spider_request_amasty_store_locator.yml  spider_request_amrest_eu.yml  spider_request_closeby.yml  spider_request_easylocator.yml  spider_request_elfsight.yml  spider_request_freshop.yml  spider_request_geo_me.yml  spider_request_google_places_api.yml  spider_request_kibo.yml  spider_request_lighthouse.yml  spider_request_limesharp_store_locator.yml  spider_request_localisr.yml  spider_request_locally.yml  spider_request_maps_marker_pro.yml  spider_request_metalocator.yml  spider_request_metizsoft.yml  spider_request_momentfeed.yml  spider_request_retail_tune.yml  spider_request_rexel.yml  spider_request_rio_seo.yml  spider_request_shopapps.yml  spider_request_stockinstore.yml  spider_request_stockist.yml  spider_request_store_locator_plus_cloud.yml  spider_request_store_locator_plus_self.yml  spider_request_storefrontgateway.yml  spider_request_storelocatorwidgets.yml  spider_request_storemapper.yml  spider_request_storepoint.yml  spider_request_storerocket.yml  spider_request_structured_data.yml  spider_request_super_store_finder.yml  spider_request_sweetiq.yml  spider_request_sylinder.yml  spider_request_uberall.yml  (+9 more)
.github/workflows/: all_spiders.yml  auto-close-failed-auto-prs.yml  black-check.yml  (+19 more)
alltheplaces_processing_pipeline/: README.md  atp_dag.py
ci/: assemble_latest.sh  build_group_manifest.py  build_latest_json.py  buildspec.yml  check_spider_naming_consistency.py  concatenate_parquet.py  convert_to_parquet.py  dead_spider_killer.py  fetch_all_stats.sh  geojsons_to_parquet.py  ndgeojsons_to_parquet.py  remove_requires_proxy.py  restore_history.py  run_all_spiders.py  run_all_spiders.sh  run_changed_spiders.sh  run_group_spiders.sh  run_one_spider.sh  run_pr_spiders.sh  run_spiders_on_travis.sh
contrib/: check_stats.sh  dead_spiders.sh  fetch_all_stats.sh  gen_overture2osm.py  new_spider.sh
docs/: API_SPIDER.md  CATEGORIES.md  DETECTION_AND_CODE_GENERATION.md  EXTRA_ATTRIBUTES.md  GETTING_STARTED.md  HARD_WORK_SPIDER.md  MY_BRAND.md  NSI_MATCHING.md  OPENING_HOURS.md  OPEN_GRAPH_PROTOCOL.md  PIPELINES.md  PULL_REQUEST.md  SITEMAP.md  SPIDER_LINEAGE.md  SPIDER_NAMING.md  SPIDER_TYPE.md  STRUCTURED_DATA.md  WEEKLY_RUN.md  WHY_SPIDER.md  WIKIDATA.md
locations/: __init__.py  address_spider.py  archive_utils.py  automatic_spider_generator.py  brand_utils.py  brands.py  camoufox_spider.py  captcha_solvers.py  categories.py  country_utils.py  crypto_utils.py  dict_parser.py  english_heritage_gb.py  exporters.py  extensions.py  flatgeobuf_spider.py  geo.py  google_url.py  hours.py  items.py  json_blob_spider.py  licenses.py  linked_data_parser.py  logformatter.py  mapy_cz_url.py  materials.py  microdata_parser.py  name_suggestion_index.py  open_graph_parser.py  open_graph_spider.py  pipelines.py  playwright_spider.py  react_server_components.py  seo.py  settings.py  settings_huq.py  spider_utils.py  states_counties.py  statscollectors.py  storefinder_detector.py  (+6 more)
preview/: index.html
templates/: basic.tmpl
tests/: __init__.py  test_address_clean_up.py  test_bad_coords.py  test_brand.py  test_brand_utils.py  test_build_group_manifest.py  test_build_latest_json.py  test_categories.py  test_clas_ohlson_no_spider.py  test_clean_name.py  test_closed.py  test_country_utils.py  test_dict_parser.py  test_download_delay.py  test_exporter_openaddresses.py  test_exporters.py  test_extract_gb_postcode_extra.py  test_genspider.py  test_geo.py  test_geo_me.py  test_geojson.py  test_geojson_point_item.py  test_google_url.py  test_insights.py  test_item_attributes.py  test_japan_coordinates_fix.py  test_ld_parser.py  test_lineage.py  test_list_group_command.py  test_mapy_cz_url.py  test_merge_items.py  test_microdata_parser.py  test_name_suggestion_index.py  test_ndgeojson_to_parquet.py  test_nsi.py  test_og_parser.py  test_opening_hours.py  test_pipeline_apply_nsi_categories.py  test_pipeline_assert_url_scheme.py  test_pipeline_bbox.py  (+23 more)
(+8637 files in other folders)
