[project]
name = "alltheplaces"
version = "0.0.0"
description = "A set of spiders ato extract location information from places that post their location on the internet."
requires-python = ">=3.11,<3.12"
dependencies = [
    "babel",
    "boto3",
    "brotli",
    "chompjs",
    "cryptography",
    "duckdb",
    "geonamescache",
    "geopandas",
    "ijson",
    "json5",
    "openpyxl",
    "pdfplumber",
    "phonenumbers",
    "phpserialize",
    "playwright_captcha",
    "pyarrow",
    "pycountry",
    "pygeohash<4",
    "pygithub",
    "pyproj",
    "python-json-logger",
    "requests",
    "requests-cache",
    "reverse-geocoder",
    "scrapy>=2.14.0",
    "scrapy-camoufox",
    "scrapy-playwright>=0.0.45",
    "scrapy-zyte-api>=0.32.0",
    "shapely",
    "twisted[http2]",
    "tzdata",
    "unidecode",
    "xmltodict",
]


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.python.org/simple"

[tool.uv.sources]

[tool.black]
line-length = 120
target-version = ['py311']

[dependency-groups]
dev = [
    "autoflake8",
    "awscli",
    "black",
    "flake8",
    "isort",
    "pep8-naming",
    "pre-commit",
    "pylint",
    "pytest",
    "ty",
]
