[project]
name = "alltheplaces"
version = "0.0.0"
description = "A set of spiders ato extract location information from places that post their location on the internet."
requires-python = ">=3.11,<3.12"
dependencies = [
    "babel",
    "boto3",
    "brotli",
    "chompjs",
    "cryptography",
    "duckdb",
    "geonamescache",
    "geopandas",
    "ijson",
    "json5",
    "openpyxl",
    "pdfplumber",
    "phonenumbers",
    "phpserialize",
    "playwright_captcha",
    "psutil",
    "pyarrow",
    "pycountry",
    "pygeohash<4",
    "pygithub",
    "pyproj",
    "pyshp>=3.0.12",
    "python-json-logger",
    "requests",
    "requests-cache",
    "reverse-geocoder",
    "scrapy>=2.16.0",
    "scrapy-camoufox @ git+https://github.com/iandees/scrapy-camoufox.git",
    "scrapy-playwright>=0.0.47",
    "scrapy-zyte-api>=0.35.0",
    "shapely",
    "twisted[http2]",
    "tzdata",
    "unidecode",
    "xmltodict",
]


[[tool.uv.index]]
name = "pypi"
url = "https://pypi.python.org/simple"

[tool.uv.sources]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.format]
# Match black's quote preferences: double quotes (codebase standard)
quote-style = "double"
indent-style = "space"
line-ending = "auto"
# Don't reformat docstrings (black didn't)
docstring-code-format = false

[tool.ruff.lint]
# Match black/isort behavior: formatting + basic checks, not aggressive linting
# Disabled rules would require widespread codebase changes:
# - E501: line too long (widespread in existing code, black wasn't enforcing)
# - E722: bare except (126 instances in existing code, not enforced before)
# - E721: type comparisons (style issue, not enforced before)
ignore = [
    "E501",  # Line too long (black wasn't enforcing pre-existing violations)
    "E722",  # Do not use bare `except`
    "E721",  # Type comparison should use `isinstance()`
]
# Only enable rules that match black/isort behavior
select = [
    "F",     # Pyflakes (import/undefined name checks)
    "E",     # pycodestyle errors (minus the ones we ignore above)
    "W",     # pycodestyle warnings
    "I",     # isort import ordering
]

[dependency-groups]
dev = [
    "autoflake8",
    "awscli",
    "black",
    "flake8",
    "isort",
    "pep8-naming",
    "pre-commit",
    "pylint",
    "pytest",
    "ty",
]

[tool.ty.rules]
invalid-method-override = "ignore"
